--- a/myapp/package.json
+++ b/myapp/package.json
@@ -17,6 +17,7 @@
 	"dependencies": {
 		"@types/d3": "^7.4.3",
 		"d3": "^7.8.5",
+		"gsap": "^3.12.2",
 		"moment": "^2.29.4",
 		"svelte-routing": "^2.6.0"
 	}
